Add new fonts, update games & music

--- a/games.html
+++ b/games.html
@@ -27,8 +27,8 @@
       <div class="sidebarTitle">
         <p>Currently Playing</p>
       </div>
-      <div><img src="assets/games/luigismanion.jpg"></div>
-      <div><img src="assets/games/fortnite.jpg"></div>
+      <div><img src="assets/games/endless-monday.jpg"></div>
+      <div><img src="assets/games/dreambbq.jpg"></div>
     </div>
     <div class="page">
       <div class="pageTitle">
@@ -40,39 +40,39 @@
       <div class="pageGallery">
         <div>
           <img src="assets/games/mother3.jpg" >
-          <p><strong>Mother 3</strong><br>GBA</p>
+          <p><b>Mother 3</b><br>GBA</p>
         </div>
         <div>
           <img src="assets/games/minecraft.jpg" >
-          <p><strong>Minecraft</strong><br>PC</p>
+          <p><b>Minecraft</b><br>PC</p>
         </div>
         <div>
           <img src="assets/games/persona5.jpg" >
-          <p><strong>Persona 5</strong><br>PS4</p>
+          <p><b>Persona 5</b><br>PS4</p>
         </div>
         <div>
           <img src="assets/games/earthbound.png" >
-          <p><strong>Earthbound</strong><br>SNES</p>
+          <p><b>Earthbound</b><br>SNES</p>
         </div>
         <div>
           <img src="assets/games/odyssey.jpg" >
-          <p><strong>Super Mario Odyssey</strong><br>Switch</p>
+          <p><b>Super Mario Odyssey</b><br>Switch</p>
         </div>
         <div>
           <img src="assets/games/monkeyball2.jpg" >
-          <p><strong>Super Monkey Ball 2</strong><br>Gamecube</p>
+          <p><b>Super Monkey Ball 2</b><br>Gamecube</p>
         </div>
         <div>
           <img src="assets/games/ruby.jpg" >
-          <p><strong>Pokémon Ruby</strong><br>GBA</p>
+          <p><b>Pokémon Ruby</b><br>GBA</p>
         </div>
         <div>
           <img src="assets/games/fortnite.jpg" >
-          <p><strong>Fortnite</strong><br>PC</p>
+          <p><b>Fortnite</b><br>PC</p>
         </div>
         <div>
           <img src="assets/games/omori.jpg" >
-          <p><strong>Omori</strong><br>PC</p>
+          <p><b>Omori</b><br>PC</p>
         </div>
       </div>
       <div class="spacer"></div>
