--- a/music.html
+++ b/music.html
@@ -32,14 +32,14 @@
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
-      <div><a href="https://open.spotify.com/album/3N3NdhXkyIKauv6xkoUpwE">
-        <img src="assets/music/happyend.webp">
+      <div><a href="https://open.spotify.com/album/0ibbISvq4loJXVtZquKrQB">
+        <img src="assets/music/viagr_aboys.png">
       </a></div>
-      <div><a href="https://open.spotify.com/album/1A84EfaPGuBdtLSEG0K0Fz">
-        <img src="assets/music/roundtable.jpg">
+      <div><a href="https://blackcountrynewroad.bandcamp.com/album/forever-howlong">
+        <img src="assets/music/forever-howlong.jpg">
       </a></div>
-      <div><a href="https://open.spotify.com/album/61w6ldkTnQNDTImaUiBoQs">
-        <img src="assets/music/pomodorosa.jpg">
+      <div><a href="https://open.spotify.com/album/1jp9ORX7ZRoMPDPO47hh7Y">
+        <img src="assets/music/ku-ten-chords.jpg">
       </a></div>
     </div>
     <div class="page">
@@ -54,91 +54,91 @@
           <a href="https://botanicalhouse.bandcamp.com/album/for-lovers-2004s">
             <img src="assets/music/forlovers.jpg" >
           </a>
-          <p><strong>For Lovers</strong><br>Lamp</p>
+          <p><b>For Lovers</b><br>Lamp</p>
         </div>
         <div>
           <a href="https://midairthief.bandcamp.com/album/crumbling">
             <img src="assets/music/crumbling.jpg" >
           </a>
-          <p><strong>Crumbling</strong><br>Mid-Air Thief</p>
+          <p><b>Crumbling</b><br>Mid-Air Thief</p>
         </div>
         <div>
           <a href="https://sidneygish.bandcamp.com/album/no-dogs-allowed">
             <img src="assets/music/nodogsallowed.jpg" >
           </a>
-          <p><strong>No Dogs Allowed</strong><br>Sidney Gish</p>
+          <p><b>No Dogs Allowed</b><br>Sidney Gish</p>
         </div>
         <div>
           <a href="https://candyclaws.bandcamp.com/album/ceres-calypso-in-the-deep-time">
             <img src="assets/music/ceres.jpg" >
           </a>
-          <p><strong> Ceres & Calypso in the Deep Time</strong><br>Candy Claws</p>
+          <p><b> Ceres & Calypso in the Deep Time</b><br>Candy Claws</p>
         </div>
         <div>
           <a href="https://www.youtube.com/watch?v=_MxuT9dE6Y0">
             <img src="assets/music/acallfrommydream.jpg" >
           </a>
-          <p><strong>A Call From My Dream</strong><br>Meaningful Stone</p>
+          <p><b>A Call From My Dream</b><br>Meaningful Stone</p>
         </div>
         <div>
           <a href="https://meiehara.bandcamp.com/album/ampersands">
             <img src="assets/music/ampersands.jpg" >
           </a>
-          <p><strong>Ampersands</strong><br>mei ehara</p>
+          <p><b>Ampersands</b><br>mei ehara</p>
         </div>
         <div>
           <a href="https://themountaingoats.bandcamp.com/album/goths">
             <img src="assets/music/goths.jpg" >
           </a>
-          <p><strong>Goths</strong><br>The Mountain Goats</p>
+          <p><b>Goths</b><br>The Mountain Goats</p>
         </div>
         <div>
           <a href="https://menitrust.bandcamp.com/album/oncle-jazz">
             <img src="assets/music/onclejazz.jpg" >
           </a>
-          <p><strong>Oncle Jazz</strong><br>Men I Trust</p>
+          <p><b>Oncle Jazz</b><br>Men I Trust</p>
         </div>
         <div>
           <a href="https://www.youtube.com/watch?v=dlRpLV6iqNg">
             <img src="assets/music/ochamekan.jpg" >
           </a>
-          <p><strong>Ochamekan</strong><br>Serani Poji</p>
+          <p><b>Ochamekan</b><br>Serani Poji</p>
         </div>
         <div>
           <a href="https://open.spotify.com/album/4NU1Wi1CUd416Al7wUucJy?si=evZkjB2gQm6XZ7grQ0gkAA">
             <img src="assets/music/hosonohouse.jpg" >
           </a>
-          <p><strong>Hosono House</strong><br>Haruomi Hosono</p>
+          <p><b>Hosono House</b><br>Haruomi Hosono</p>
         </div>
         <div>
           <a href="https://www.youtube.com/playlist?list=PLMynaxX_I0z_Ud3D7936tusb_3cszjhGC">
             <img src="assets/music/life.jpg" >
           </a>
-          <p><strong>Life</strong><br>The Cardigans</p>
+          <p><b>Life</b><br>The Cardigans</p>
         </div>
         <div>
           <a href="https://www.youtube.com/watch?v=hjI7U27P7Jk">
             <img src="assets/music/gusbonito.png" >
           </a>
-          <p><strong>Gus Bonito vs. Kane West</strong><br>Gus Bonito vs. Kane West</p>
+          <p><b>Gus Bonito vs. Kane West</b><br>Gus Bonito vs. Kane West</p>
         </div>
         <div>
           <a href="https://underwater-computing.bandcamp.com/album/4-ways-of-working">
             <img src="assets/music/4waysofworking.png" />
           </a>
-          <p><strong>4 Ways of Working</strong><br>コディ</p>
+          <p><b>4 Ways of Working</b><br>コディ</p>
         </div>
         <div>
           <a href="https://haleyheynderickx.bandcamp.com/album/i-need-to-start-a-garden">
             <img src="assets/music/garden.jpg" >
           </a>
-          <p><strong> I Need to Start a Garden</strong><br>Haley Heynderickx</p>
+          <p><b> I Need to Start a Garden</b><br>Haley Heynderickx</p>
         </div>
         <div>
           <a href="https://needlejuice.bandcamp.com/album/spirit-phone">
             <img src="assets/music/spiritphone.jpg" >
           </a>
-          <p><strong>Spirit Phone</strong><br>Lemon Demon</p>
+          <p><b>Spirit Phone</b><br>Lemon Demon</p>
         </div>
       </div>
       <div class="spacer"></div>
