--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p>Updates</p>
       </div>
       <div class="sidebarContainer">
+        <p><strong>May 29th, 2025:</strong> Added IBM fonts for titles & text.</p>
         <p><strong>April 23rd, 2025:</strong> Updated profile picture, added WiiRing.</p>
         <p><strong>March 29th, 2025:</strong> Now using markedjs for Blog, Projects, and Resources pages.</p>
         <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
