Update games & music

--- a/games.html
+++ b/games.html
@@ -27,8 +27,8 @@
       <div class="sidebarTitle">
         <p>Currently Playing</p>
       </div>
-      <div><img src="assets/games/endless-monday.jpg"></div>
-      <div><img src="assets/games/dreambbq.jpg"></div>
+      <div><img src="assets/games/deltarune.jpg"></div>
+      <div><img src="assets/games/stylesavvy.jpg"></div>
     </div>
     <div class="page">
       <div class="pageTitle">
