--- a/music.html
+++ b/music.html
@@ -32,14 +32,14 @@
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
-      <div><a href="https://open.spotify.com/album/0ibbISvq4loJXVtZquKrQB">
-        <img src="assets/music/viagr_aboys.png">
+      <div><a href="https://carseatheadrest.bandcamp.com/album/the-scholars">
+        <img src="assets/music/the-scholars.jpg">
       </a></div>
-      <div><a href="https://blackcountrynewroad.bandcamp.com/album/forever-howlong">
-        <img src="assets/music/forever-howlong.jpg">
+      <div><a href="https://open.spotify.com/album/3o81FH5FTYVtoBQOZr3T7y">
+        <img src="assets/music/fancy-that.png">
       </a></div>
-      <div><a href="https://open.spotify.com/album/1jp9ORX7ZRoMPDPO47hh7Y">
-        <img src="assets/music/ku-ten-chords.jpg">
+      <div><a href="https://lucydacus.bandcamp.com/album/forever-is-a-feeling">
+        <img src="assets/music/forever-is-a-feeling.jpg">
       </a></div>
     </div>
     <div class="page">
